--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -12,18 +12,19 @@
 
 <AnchorPane prefHeight="461.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <children>
-        <Label alignment="CENTER_RIGHT" layoutX="7.0" layoutY="8.0" prefHeight="76.0" prefWidth="312.0" text="0" AnchorPane.bottomAnchor="378.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="8.0">
+      <Button layoutX="81.0" layoutY="412.0" mnemonicParsing="false" text="Button" />
+        <Label fx:id="finalLabel" alignment="CENTER_RIGHT" layoutX="8.0" layoutY="7.0" prefHeight="53.0" prefWidth="312.0" text="0" AnchorPane.bottomAnchor="401.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="7.0">
             <font>
                 <Font name="AdobeArabic-Regular" size="35.0" />
             </font>
         </Label>
-      <TabPane layoutY="68.0" prefHeight="393.0" prefWidth="328.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutY="68.0" prefHeight="332.0" prefWidth="328.0" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="7.976931348623157E307" tabMaxWidth="7.976931348623157E307" AnchorPane.topAnchor="68.0">
         <tabs>
           <Tab text="Integer ">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                          <GridPane prefHeight="364.0" prefWidth="328.0">
+                          <GridPane layoutX="2.0" prefHeight="300.0" prefWidth="320.0">
                               <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,25 +35,25 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="63.0" text="Button" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="3" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="24.0" text="1" onAction="#addNumber1"/>
+                              <Button mnemonicParsing="false" text="2" GridPane.columnIndex="1" />
+                              <Button mnemonicParsing="false" text="3" GridPane.columnIndex="2" />
+                              <Button mnemonicParsing="false" text="+" GridPane.columnIndex="3" onAction="#numbersAddition"/>
+                              <Button mnemonicParsing="false" text="4" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" text="7" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" text="x" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                               <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                               <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="3" />
                            </children>
                           </GridPane>
                      </children></AnchorPane>
@@ -65,5 +66,7 @@
           </Tab>
         </tabs>
       </TabPane>
+      <Button layoutX="244.0" layoutY="412.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="163.0" layoutY="412.0" mnemonicParsing="false" text="Button" />
     </children>
 </AnchorPane>
