updating to repository

--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -12,12 +12,7 @@
 
 <AnchorPane prefHeight="461.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <children>
-      <Button layoutX="81.0" layoutY="412.0" mnemonicParsing="false" text="Button" />
-        <Label fx:id="finalLabel" alignment="CENTER_RIGHT" layoutX="8.0" layoutY="7.0" prefHeight="53.0" prefWidth="312.0" text="0" AnchorPane.bottomAnchor="401.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="7.0">
-            <font>
-                <Font name="AdobeArabic-Regular" size="35.0" />
-            </font>
-        </Label>
+      <Button layoutX="81.0" layoutY="412.0" mnemonicParsing="false" text="Enter" />
       <TabPane layoutY="68.0" prefHeight="332.0" prefWidth="328.0" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="7.976931348623157E307" tabMaxWidth="7.976931348623157E307" AnchorPane.topAnchor="68.0">
         <tabs>
           <Tab text="Integer ">
@@ -38,10 +33,10 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="24.0" text="1" onAction="#addNumber1"/>
+                              <Button fx:id="b1" mnemonicParsing="false" onAction="#addNumber1" prefHeight="27.0" prefWidth="24.0" text="1" />
                               <Button mnemonicParsing="false" text="2" GridPane.columnIndex="1" />
                               <Button mnemonicParsing="false" text="3" GridPane.columnIndex="2" />
-                              <Button mnemonicParsing="false" text="+" GridPane.columnIndex="3" onAction="#numbersAddition"/>
+                              <Button mnemonicParsing="false" onAction="#addition" text="+" GridPane.columnIndex="3" />
                               <Button mnemonicParsing="false" text="4" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
@@ -50,10 +45,10 @@
                               <Button mnemonicParsing="false" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <Button mnemonicParsing="false" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                               <Button mnemonicParsing="false" text="x" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                              <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" text="+/-" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" text="/" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                              <Button mnemonicParsing="false" text="." GridPane.rowIndex="3" />
                            </children>
                           </GridPane>
                      </children></AnchorPane>
@@ -66,7 +61,12 @@
           </Tab>
         </tabs>
       </TabPane>
-      <Button layoutX="244.0" layoutY="412.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="163.0" layoutY="412.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="244.0" layoutY="412.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
+      <Button layoutX="163.0" layoutY="412.0" mnemonicParsing="false" text="Back" />
+      <Label fx:id="outputLabel" alignment="CENTER_RIGHT" layoutX="6.0" layoutY="7.0" prefHeight="54.0" prefWidth="316.0" text="0">
+         <font>
+            <Font name="AGaramondPro-Regular" size="35.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
