Add CSS to calculator

--- a/src/sample/4function.fxml
+++ b/src/sample/4function.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?scenebuilder-stylesheet style.css?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -11,8 +13,9 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="461.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+
     <children>
-      <Button layoutX="245.0" layoutY="402.0" mnemonicParsing="false" onAction="#calculations" prefHeight="54.0" prefWidth="83.0" text="=" />
+      <Button layoutX="249.0" layoutY="402.0" mnemonicParsing="false" onAction="#calculations" prefHeight="54.0" prefWidth="83.0" text="=" />
       <TabPane layoutY="68.0" prefHeight="332.0" prefWidth="328.0" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="7.976931348623157E307" tabMaxWidth="7.976931348623157E307" AnchorPane.topAnchor="68.0">
         <tabs>
           <Tab text="Integer ">
@@ -61,7 +64,7 @@
                                  <font>
                                     <Font size="25.0" />
                                  </font></Button>
-                              <Button mnemonicParsing="false" onAction="#calculations" prefHeight="79.0" prefWidth="88.0" text="x" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                              <Button mnemonicParsing="false" onAction="#calculations" prefHeight="79.0" prefWidth="88.0" text="×" GridPane.columnIndex="3" GridPane.rowIndex="1">
                                  <font>
                                     <Font size="25.0" />
                                  </font></Button>
@@ -93,7 +96,7 @@
                                  <font>
                                     <Font size="25.0" />
                                  </font></Button>
-                              <Button mnemonicParsing="false" prefHeight="84.0" prefWidth="97.0" text="." GridPane.rowIndex="3">
+                              <Button mnemonicParsing="false" onAction="#enterNumber" prefHeight="84.0" prefWidth="97.0" text="." GridPane.rowIndex="3">
                                  <font>
                                     <Font size="25.0" />
                                  </font></Button>
@@ -109,17 +112,22 @@
           </Tab>
         </tabs>
       </TabPane>
-      <Button layoutY="402.0" mnemonicParsing="false" onAction="#clear" prefHeight="54.0" prefWidth="83.0" text="A/C" />
+      <Button id="cancel-button" fx:id="cancelButton" layoutY="402.0" maxWidth="159.0" mnemonicParsing="false" onAction="#clear" prefHeight="70.0" prefWidth="159.0" text="A/C" />
       <Button layoutX="162.0" layoutY="402.0" mnemonicParsing="false" onAction="#delete" prefHeight="54.0" prefWidth="83.0" text="&lt;-" />
-      <Label fx:id="outputLabel" alignment="CENTER_RIGHT" layoutX="6.0" layoutY="20.0" prefHeight="41.0" prefWidth="315.0">
+      <Label id="output-label" fx:id="outputLabel" alignment="CENTER_RIGHT" layoutX="6.0" layoutY="20.0" prefHeight="41.0" prefWidth="315.0">
          <font>
             <Font name="AGaramondPro-Regular" size="35.0" />
          </font>
       </Label>
-      <Label fx:id="auxiliaryLabel" alignment="CENTER_RIGHT" layoutX="6.0" layoutY="4.0" prefHeight="19.0" prefWidth="315.0" textFill="RED">
+      <Label id="auxiliary-label" fx:id="auxiliaryLabel" alignment="CENTER_RIGHT" layoutX="6.0" layoutY="4.0" prefHeight="19.0" prefWidth="315.0" textFill="RED">
          <font>
             <Font name="AdobeHebrew-Regular" size="13.0" />
          </font>
       </Label>
     </children>
+
+    <stylesheets>
+        <URL value="@style.css" />
+    </stylesheets>
+
 </AnchorPane>
